assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place

XMLWordPrintable

    • b20

        The hs_err head is
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/163049.jesper/s/src/share/vm/opto/graphKit.cpp:236), pid=63733, tid=30723
        # assert(ex_map->jvms()->same_calls_as(_exceptions->jvms())) failed: all collected exceptions must come from the same place
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b128) (build 1.8.0-fastdebug-b128)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.20-b03-internal-201402041630.jesper.hotspot-fastdebug mixed mode bsd-amd64 compressed oops)
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x00007fe64d13a800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=30723, stack(0x00000001e2f06000,0x00000001e3006000)]

        Stack: [0x00000001e2f06000,0x00000001e3006000], sp=0x00000001e30031e0, free space=1012k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0x8a91fc] VMError::report_and_die()+0x45e
        V [libjvm.dylib+0x3013bd] report_vm_error(char const*, int, char const*, char const*)+0x63
        V [libjvm.dylib+0x3e7a5c] GraphKit::add_exception_state(SafePointNode*)+0x8c
        V [libjvm.dylib+0x3ead37] GraphKit::add_exception_states_from(JVMState*)+0x4f
        V [libjvm.dylib+0x210ff8] PredictedCallGenerator::generate(JVMState*, Parse*)+0x2ca
        V [libjvm.dylib+0x35ddf9] Parse::do_call()+0x48d
        V [libjvm.dylib+0x72d10b] Parse::do_one_bytecode()+0x4547
        V [libjvm.dylib+0x72164e] Parse::do_one_block()+0x322
        V [libjvm.dylib+0x721a22] Parse::do_all_blocks()+0x2f6
        V [libjvm.dylib+0x72403d] Parse::Parse(JVMState*, ciMethod*, float, Parse*)+0x8e5
        V [libjvm.dylib+0x21301c] ParseGenerator::generate(JVMState*, Parse*)+0x9e
        V [libjvm.dylib+0x35ddf9] Parse::do_call()+0x48d
        V [libjvm.dylib+0x72d10b] Parse::do_one_bytecode()+0x4547
        V [libjvm.dylib+0x72164e] Parse::do_one_block()+0x322
        V [libjvm.dylib+0x721a22] Parse::do_all_blocks()+0x2f6
        V [libjvm.dylib+0x72403d] Parse::Parse(JVMState*, ciMethod*, float, Parse*)+0x8e5
        V [libjvm.dylib+0x21301c] ParseGenerator::generate(JVMState*, Parse*)+0x9e
        V [libjvm.dylib+0x2abac0] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x982
        V [libjvm.dylib+0x20facc] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x102
        V [libjvm.dylib+0x2b1a6f] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x651
        V [libjvm.dylib+0x2b4743] CompileBroker::compiler_thread_loop()+0x32d
        V [libjvm.dylib+0x8388b7] JavaThread::thread_main_inner()+0x185
        V [libjvm.dylib+0x83b2aa] JavaThread::run()+0x2a2
        V [libjvm.dylib+0x6feb05] java_start(Thread*)+0x105
        C [libsystem_c.dylib+0x147a2] _pthread_start+0x147
        C [libsystem_c.dylib+0x11e1] thread_start+0xd

              Assignee:
              Vladimir Ivanov
              Reporter:
              Boris Molodenkov
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: